# auditor-tools

./: .gitignore  Cargo.toml  auditor_tools_meta_prd_and_prd_1.md  index.html  layout1-dashboard-cards.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
file-conversion-legacy/ept-main/: README.md  index.html  package-lock.json  package.json
file-conversion-legacy/ept-main/.github/workflows/: release.yml
file-conversion-legacy/ept-main/src/: main.ts  styles.css
file-conversion-legacy/ept-main/src-tauri/: Cargo.toml  tauri.conf.json
file-conversion-legacy/ept-main/src-tauri/src/: decompression_engine.rs  file_scanner.rs  lib.rs  main.rs  process_controller.rs  report_model.rs  report_writer.rs
file-conversion-legacy/ept-main/src/components/: AppState.ts  EPTAppShell.ts  LogPanel.ts  ProgressPanel.ts
src/: dashboard.ts  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: conversion_engine.rs  decompression_engine.rs  ept_logger.rs  file_conversion_adapter.rs  file_scanner.rs  hashing_service.rs  llm_export_engine.rs  main.rs  process_controller.rs  report_model.rs  report_writer.rs
src/components/: DisabledTaskCard.ts
src/router/: TaskRouterStub.ts
src/shared/: SharedLibPlaceholder.ts
src/tasks/file-conversion/: FileConversionView.ts
