[package]
name = "auditor-tools"
version = "0.1.0"
description = "auditor-tools desktop shell"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Existing File Conversion app as an internal dependency (used later for integration)
ept_lib = { path = "../file-conversion-legacy/ept-main/src-tauri", package = "ept" }


