[package]
name = "auditor-tools"
version = "0.1.0"
description = "auditor-tools desktop shell"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
flate2 = "1.0"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
rust_xlsxwriter = "0.70"
which = "5.0"
calamine = "0.24"


